# Driving-area-detection

./: CMakeLists.txt  get_clustered_output.cpp  readme.md
